# vtk-implementation

./: README.md  Study Notes for VTK.md
doc/: Github_study_notes.md  README.md  vtk_animation_flow_chart.drawio
doc/vtkAnimation/: vtkAnimation.md.md
doc/vtk_delete_point/: vtk_delete_cells_points.md
fix_obj_abs_pos/: fix_object_abs_position.cxx
generateActorUsingSectionPointAndLinePoint/: GenerateActorUsingSectionPointAndLinePoint.cxx  GenerateActorUsingSectionPointAndLinePoint.h  test.cxx
study_materieal/: Culling.md  README.md  no such file or directory,vtk_module_not_found.md
test/: README.md
test/Animation/AnimateActors/: AnimateActors.cxx
test/Animation/Animation/: Animation.cxx  CMakeLists.txt
test/Animation/AnimationScene/: AnimationScene.cxx
test/BackfaceCulling/: BackfaceCulling.cxx
test/DeletePoint/: CMakeLists.txt
test/Delete_point_vtkCleanPolyData/: CMakeLists.txt  DeleteCells.cxx
test/double T cells/: doubleTcells.cxx
test/generateActorUsingSectionPointAndLinePoint/: CMakeLists.txt
test/rotate_camera/: self_define_rotate_camera.cc
vtkAnimation/: vtkAnimation.md.md
